# material-3-file-manager-rust

./: Cargo.toml  check_output.json  check_output_2.json  check_output_3.json  check_output_4.json  check_output_5.json  check_output_6.json  check_output_drives.json  check_output_drives_2.json  check_output_drives_final.json  check_output_final.json  check_output_final_context.json  check_output_final_context_2.json  check_output_final_move.json  check_output_final_move_10.json  check_output_final_move_11.json  check_output_final_move_2.json  check_output_final_move_3.json  check_output_final_move_4.json  check_output_final_move_5.json  check_output_final_move_6.json  check_output_final_move_7.json  check_output_final_move_8.json  check_output_final_move_9.json  check_output_final_sidebar.json  check_output_final_sidebar_2.json  check_output_final_sidebar_3.json  check_output_final_sidebar_4.json  check_output_final_sidebar_success.json  check_output_final_success.json  check_output_final_success_2.json  check_output_final_success_real.json  check_output_sidebar_fixed.json  check_output_success.json  fix_file_list.py  fix_file_list_final.py  fix_file_list_final_v10.py  fix_file_list_final_v11.py  fix_file_list_final_v2.py  fix_file_list_final_v3.py  (+12 more)
src/: main.rs
src/app_state/: config.rs  mod.rs  navigation.rs  workspace.rs
src/assets/: app_cache.rs  fonts.rs  icon_cache.rs  icons.rs  mime_resolver.rs  mod.rs  thumbnail_worker.rs
src/fs_ops/: applications.rs  bridge.rs  mod.rs  portal.rs  provider.rs  scanner.rs  watcher.rs
src/theme_engine/: config.rs  matugen.rs  (+4 more)
(+19 files in other folders)
